--- a/KinoPlayer/pages/player.html
+++ b/KinoPlayer/pages/player.html
@@ -7,7 +7,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#090909', end
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);">
-   <iframe id="video" src='//videocode/iframe' frameborder='0'  width='900' height='450' scrolling='no' allowfullscreen></iframe>
+   <iframe id="video" src='https://streamguard.cc/video/videocode/iframe?ref=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJyZWZfaG9zdCI6Imdvb2dsZS5ydSIsInJlcV9ob3N0Ijoic3RyZWFtZ3VhcmQuY2MiLCJleHAiOjE1NDAzOTUyNDIsInRva2VuIjoiZWVlZGVkMDJiYjVlZjU1ZjBmMGQ2Y2ZjZTBiNzNkNWYifQ.BLYPvWrywVoRwcW1bwPf6F6qCv6o_fPjHb86yCRWdYg' frameborder='0'  width='900' height='450' scrolling='no' allowfullscreen></iframe>
 </div>
 <div id="donate" style="display:none; position: absolute;
     top: 50%;
